using lamda function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(rcpp_split_indices)
 export(subset_first_three)
 export(subset_positives)
 export(subset_with_names)
+export(transformEx)
 importFrom(Rcpp,evalCpp)
 useDynLib(OneDayOneRcpp)
