--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,14 @@
 export(boostNormals)
 export(cxx11Normals)
 export(helloWorld)
+export(innerProduct)
+export(parallelInnerProduct)
 export(rcpp_Normals)
 export(rcpp_split_indices)
 export(subset_first_three)
 export(subset_positives)
 export(subset_with_names)
 export(transformEx)
+import(RcppParallel)
 importFrom(Rcpp,evalCpp)
 useDynLib(OneDayOneRcpp)
