update namespace and *.Rproj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cxx11Normals)
 export(helloWorld)
 export(innerProduct)
 export(parallelInnerProduct)
+export(parallelJsDistance)
 export(rcpp_Normals)
 export(rcpp_split_indices)
 export(subset_first_three)
